--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/router": "^19.2.0",
     "@apollo/client": "^3.13.5",
     "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
+    "cloudinary": "^2.6.0",
     "graphql": "^16.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
